--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="apple-touch-icon" sizes="180x180" href="./public/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="./public/favicon_io/site.webmanifest">
+    <link rel="icon" href="/images/h-favi.png">
+    <link rel="stylesheet" href="/favicon-style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hamkemboi</title>
     <meta name="description" />
     <meta name="author" content="landroverism" />
-    <!-- <link rel="icon" href="/favicon.ico" /> -->
   </head>
 
   <body>
